test/razor.test.views/sections/error/oneViewSectionReverseOrder.raz
@Html.section("Headers")

@section Headers{
    <h1>@Model.h1</h1>
}